# cpprefernces

./: CMakeLists.txt  README.md
algorithm/array/: 2d_array_as_1d_array.cpp  CMakeLists.txt  bubble_sort_an_array.cpp  rotate_an_array.cpp
algorithm/linkedlist/: CMakeLists.txt  reverse_list.cpp
algorithm/series/: CMakeLists.txt  fibonacci_series_recursive.cpp  nth_fibonacci_series_recursive.cpp
algorithm/string/: CMakeLists.txt  replace_word_in_sentence.cpp  replace_words_in_sentence.cpp  reverse_words_in_sentence.cpp  string_reverse  string_reverse.cpp  test_a_code.cpp
bitwise/: CMakeLists.txt  addition_without_plus.cpp  bitmap.cpp  change_endianess.cpp  check_endianess.cpp  count_set_bits.cpp  decimalToBinary.cpp  decimalToHexadecimal.cpp  flip_a_bit.cpp  flip_two_bits.cpp  float_binary_representation.cpp  get_a_bit.cpp  multiply_using_binary.cpp  obtain_bit_using_struct.cpp  reset_a_bit.cpp  reverse_bits.cpp  rotate_bits.cpp  set_a_bit.cpp  shift_order.cpp  test_even_odd.cpp
data_structures/binary_tree/: CMakeLists.txt  binary_tree.cpp
design_pattern/: CMakeLists.txt  singleton.cpp
design_pattern/structural/: CMakeLists.txt  crtp.cpp
embedded_systems/interrupt/: linker_script.md  synchronization.md
features/cast/: CMakeLists.txt  float_to_int_static_cast.cpp
features/constant/: CMakeLists.txt  free_const_function.cpp  modify_in_const_function.cpp
features/datatype/: CMakeLists.txt  NULL_ambiguity.cpp  NULL_ambiguity_solution.cpp  assign_large_val.cpp  struct_pack.cpp  uint8_t_vs_int8_t.cpp  unsigned_assign_negative_num.cpp
features/exceptions/: CMakeLists.txt  exception_confusion.cpp  exception_in_dtor.cpp  uncaught_exception.cpp
features/friend/: CMakeLists.txt  overloading_stream_operator.cpp
features/lambda/: sort_vector_using_lambda.cpp
features/misc/: functor_vs_func_pointers.cpp  functos_vs_func_pointers.cpp  inline_func_vs_macro.md
features/move/: moving_lvalue.cpp
features/operator/: CMakeLists.txt  pointer_to_member_access_operator.cpp
features/operator_overloading/: CMakeLists.txt  conversion_operator.cpp  overload_return_type_cpp_11.cpp  prefix_and_postfix_operators.cpp
features/references/: lvalue_vs_rvalue.cpp
features/template/: template_specialization.cpp
implementation/: CMakeLists.txt  memcpy.cpp  memset.cpp  sizeof.cpp  strtok.cpp
misc/: CMakeLists.txt  char_to_int.cpp  pointer1.c  pointer2.c  test_endianess.cpp
networking/tcpip/: CMakeLists.txt  tcpip_client.cpp  tcpip_server.cpp
oops/: CMakeLists.txt  constexpr_cpp_11.cpp  default_inheritence.cpp  default_inheritence_2.cpp  private_inheritence.cpp  private_inheritence_2.cpp  public_inheritence.cpp  virtual.cpp
oops/SOLID_principles/: solid_princliples.md
oops/abstraction/: notes.md
oops/class/: CMakeLists.txt  copy_ctor_vs_move_ctor.cpp  function_overloading_ref_type.cpp  function_overloading_ref_type_2.cpp  function_overloading_ref_type_solution.cpp  implicit_assignment_op_pitfall.cpp  implicit_copy_ctor.cpp  implicit_copy_ctor_pitfall.cpp  initialization_1.cpp  initialization_1_solution.cpp  initialization_2.cpp  initialization_3.cpp  initialization_3_solution.cpp  private_dtor.cpp  private_dtor_solution.cpp  union_class.cpp  user_copy_ctor.cpp  user_copy_ctor_and_assignment_operator.cpp  user_copy_ctor_and_assignment_operator_ptr.cpp
oops/inheritance/: CMakeLists.txt  chain_of_inheritence.cpp  chain_of_inheritence_2.cpp  copy_ctor_vs_move_ctor.cpp  default_inheritence.cpp  default_inheritence_2.cpp  dynamic_cast_with_virtual_function_ptr.cpp  dynamic_cast_with_virtual_function_ref.cpp  dynamic_cast_without_virtual_function_ptr.cpp  multiple_inheritence_diamond_problem.cpp  multiple_inheritence_diamond_problem_soln.cpp  multiple_inheritence_method_ambiguity_problem.cpp  multiple_inheritence_method_ambiguity_solution.cpp  object_slicing.cpp  object_slicing_in_stl.cpp  overriding_mistake.cpp  overriding_mistake_diff_return_type.cpp  overriding_private_function.cpp  predict_output.cpp  prevent_inheritence.cpp  prevent_method_override.cpp  private_dtor_solution.cpp  private_in_base.cpp  private_in_derived.cpp  private_inheritence.cpp  private_inheritence_2.cpp  public_inheritence.cpp  public_inheritence_2.cpp  public_inheritence_3.cpp  public_inheritence_4.cpp  pure_virtual_dtor.cpp  pure_virtual_dtor_solution.cpp  union_class_as_base.cpp  union_class_derived.cpp  virtual_in_overriding_function.cpp  virtual_static_function.cpp
oops/polymorphism/: notes.md
operating_system/: topics.md
operating_system/process/: CMakeLists.txt  exec.cpp  fork.cpp  fork_and_execl.cpp  vfork.cpp
operating_system/synchronization/: CMakeLists.txt  binary_semaphore_vs_mutex.md  condition_variable.cpp  counting_semaphore.md  cpp11_thread_locking_same_mutex_twice.cpp  cpp11_thread_unq_lck_vs_lck_grd.cpp  cpp_condition_variable_sequential_threads.cpp  deadlock.md  deadlock_using_mutex.cpp  deadlock_using_mutex_solution_recursive_mutex.cpp  future_and_promise.cpp  future_and_promise_with_exception.cpp  rw_lock.cpp  spin_lock.cpp
operating_system/threads/: CMakeLists.txt  cpp11_thread.cpp  cpp11_thread_not_joining.cpp  cpp11_thread_not_joining_solution.cpp  deadlock_using_mutex.cpp  pthread_basic.cpp
pointer/: CMakeLists.txt  callback_function.cpp  chararraypointer.cpp  charpointer.cpp  charpointer_diff.cpp  charpointer_modify.cpp  charptr_to_intptr.cpp  func_pointer.cpp  incr_pointer_to_int.cpp  int_pointer.cpp  int_pointer2.cpp  inttocharpointer.cpp  sizeofpointers.cpp  struct_pointer.cpp
recursion/: CMakeLists.txt  recursion.cpp
smartpointer/: CMakeLists.txt  cyclic_reference_issue.cpp  cyclic_reference_solution.cpp  unique_ptr_and_exception.cpp  weak_ptr.cpp  weakpointer_with_class_memleak.cpp  weakpointer_with_class_noleak.cpp
string/: CMakeLists.txt  implement_string_class.cpp  modify_in_func.cpp  modify_in_func_2.cpp  replace_word_in_sentence.cpp  replace_words_in_sentence.cpp  stringreverse.cpp  to_lower_basic.cpp
string/cppinbuilt/: CMakeLists.txt  stringreverse_inbuilt.cpp  stringstream_tokenize.cpp  to_lower.cpp
threads/: condition_variable  rw_lock
(+39 files in other folders)
