cmake_minimum_required(VERSION 3.0.0)
project(cppreferences VERSION 0.1.0)

set(STD_COMPILER_VERSION -std=c++11)
SET(CMAKE_CXX_FLAGS "-g -O0")

#add_executable(cppreferences main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

#add subdirectories to build
add_subdirectory(algorithm/string)
add_subdirectory(algorithm/linkedlist)
add_subdirectory(algorithm/array)
add_subdirectory(algorithm/series)
add_subdirectory(bitwise)
add_subdirectory(design_pattern)
add_subdirectory(data_structures/binary_tree)
add_subdirectory(implementation)
add_subdirectory(misc)
add_subdirectory(oops/inheritance)
add_subdirectory(oops/class)
add_subdirectory(features/constant)
add_subdirectory(features/operator_overloading)
add_subdirectory(features/exceptions)
add_subdirectory(features/friend)
add_subdirectory(features/operator)
add_subdirectory(features/datatype)
add_subdirectory(features/cast)
add_subdirectory(pointer)
add_subdirectory(recursion)
add_subdirectory(smartpointer)
add_subdirectory(smartpointer/implementation)
add_subdirectory(stl/map)
add_subdirectory(stl/list)
add_subdirectory(stl/list/implementation)
add_subdirectory(stl/vector)
add_subdirectory(string)
add_subdirectory(string/cppinbuilt)
add_subdirectory(operating_system/threads)
add_subdirectory(operating_system/process)
add_subdirectory(operating_system/networking/tcpip)
add_subdirectory(operating_system/signals)
