cmake_minimum_required(VERSION 3.0.0)

set(BUILD_FLAGS -Wall ${STD_COMPILER_VERSION})

add_executable(initialization_1 initialization_1.cpp)
add_executable(initialization_1_solution initialization_1_solution.cpp)
add_executable(initialization_2 initialization_2.cpp)
add_executable(initialization_3 initialization_3.cpp)
add_executable(initialization_3_solution initialization_3_solution.cpp)
