cmake_minimum_required(VERSION 3.0.0)

set(BUILD_FLAGS -Wall ${STD_COMPILER_VERSION})

add_executable(initialization_1 initialization_1.cpp)
add_executable(initialization_1_solution initialization_1_solution.cpp)
add_executable(initialization_2 initialization_2.cpp)
add_executable(initialization_3 initialization_3.cpp)
add_executable(initialization_3_solution initialization_3_solution.cpp)
add_executable(implicit_copy_ctor implicit_copy_ctor.cpp)
add_executable(user_copy_ctor user_copy_ctor.cpp)
add_executable(implicit_copy_ctor_pitfall implicit_copy_ctor_pitfall.cpp)
add_executable(implicit_assignment_op_pitfall implicit_assignment_op_pitfall.cpp)
add_executable(user_copy_ctor_and_assignment_operator user_copy_ctor_and_assignment_operator.cpp)
add_executable(user_copy_ctor_and_assignment_operator_ptr user_copy_ctor_and_assignment_operator_ptr.cpp)
add_executable(copy_ctor_vs_move_ctor copy_ctor_vs_move_ctor.cpp)
add_executable(private_dtor private_dtor.cpp)
add_executable(private_dtor_solution private_dtor_solution.cpp)
add_executable(union_class union_class.cpp)