cmake_minimum_required(VERSION 3.0.0)

set(BUILD_FLAGS -Wall ${STD_COMPILER_VERSION})

add_executable(default_inheritence default_inheritence.cpp)
add_executable(default_inheritence_2 default_inheritence_2.cpp)
add_executable(private_inheritence private_inheritence.cpp)
add_executable(private_inheritence_2 private_inheritence_2.cpp)
add_executable(public_inheritence public_inheritence.cpp)
add_executable(public_inheritence_2 public_inheritence_2.cpp)
add_executable(public_inheritence_3 public_inheritence_3.cpp)
add_executable(public_inheritence_4 public_inheritence_4.cpp)
add_executable(private_in_base private_in_base.cpp)
add_executable(private_in_derived private_in_derived.cpp)
add_executable(size_of_class size_of_class.cpp)
add_executable(pure_virtual_dtor pure_virtual_dtor.cpp)
add_executable(pure_virtual_dtor_solution pure_virtual_dtor_solution.cpp)
add_executable(dynamic_cast_with_virtual_function_ptr dynamic_cast_with_virtual_function_ptr.cpp)
add_executable(dynamic_cast_without_virtual_function_ptr dynamic_cast_without_virtual_function_ptr.cpp)
add_executable(dynamic_cast_with_virtual_function_ref dynamic_cast_with_virtual_function_ref.cpp)
add_executable(union_class_derived union_class_derived.cpp)
add_executable(union_class_as_base union_class_as_base.cpp)