cmake_minimum_required(VERSION 3.0.0)

set(BUILD_FLAGS -Wall ${STD_COMPILER_VERSION})

add_executable(chain_of_inheritence chain_of_inheritence.cpp)
add_executable(chain_of_inheritence_2 chain_of_inheritence_2.cpp)
add_executable(default_inheritence default_inheritence.cpp)
add_executable(default_inheritence_2 default_inheritence_2.cpp)
add_executable(private_inheritence private_inheritence.cpp)
add_executable(private_inheritence_2 private_inheritence_2.cpp)
add_executable(public_inheritence public_inheritence.cpp)
add_executable(public_inheritence_2 public_inheritence_2.cpp)
add_executable(public_inheritence_3 public_inheritence_3.cpp)
add_executable(public_inheritence_4 public_inheritence_4.cpp)
add_executable(private_in_base private_in_base.cpp)
add_executable(private_in_derived private_in_derived.cpp)
add_executable(prevent_method_override prevent_method_override.cpp)
add_executable(size_of_class size_of_class.cpp)
add_executable(pure_virtual_dtor pure_virtual_dtor.cpp)
add_executable(pure_virtual_dtor_solution pure_virtual_dtor_solution.cpp)
add_executable(dynamic_cast_with_virtual_function_ptr dynamic_cast_with_virtual_function_ptr.cpp)
add_executable(dynamic_cast_without_virtual_function_ptr dynamic_cast_without_virtual_function_ptr.cpp)
add_executable(dynamic_cast_with_virtual_function_ref dynamic_cast_with_virtual_function_ref.cpp)
add_executable(union_class_derived union_class_derived.cpp)
add_executable(union_class_as_base union_class_as_base.cpp)
add_executable(object_slicing object_slicing.cpp)
add_executable(object_slicing_in_stl object_slicing_in_stl.cpp)
add_executable(multiple_inheritence_diamond_problem multiple_inheritence_diamond_problem.cpp)
add_executable(multiple_inheritence_diamond_problem_soln multiple_inheritence_diamond_problem_soln.cpp)
add_executable(overriding_mistake overriding_mistake.cpp)
add_executable(overriding_mistake_diff_return_type overriding_mistake_diff_return_type.cpp)
add_executable(overriding_private_function overriding_private_function.cpp)
add_executable(prevent_inheritence prevent_inheritence.cpp)
add_executable(virtual_static_function virtual_static_function.cpp)
